<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context=".Fragment1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audit"
        android:textColor="#A3B4C2"
        android:textStyle="bold"
        android:layout_marginStart="180dp"
        android:padding="10dp"
        android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/nameDis"
            android:textColor="#A3B4C2"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginStart="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture"
            android:maxWidth="50dp"
            android:textColor="#A3B4C2"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginEnd="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seminar"
            android:maxWidth="55dp"
            android:textColor="#A3B4C2"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labarat"
            android:maxWidth="55dp"
            android:textColor="#A3B4C2"
            android:textStyle="bold"
            android:textSize="12sp"
            android:layout_marginEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
        android:maxWidth="165dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
</layout>