<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/toolbar_gradient"
            android:elevation="4dp"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/btn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:background="#FF0088"
                android:layout_marginTop="20dp"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <ImageButton
                android:id="@+id/btn_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FF8800"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_download_for_offline_24"
                android:layout_gravity="end"/>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/textfirst"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/textViewYear"
            />
        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#A4B1CA"
            android:padding="10dp"
            android:text="@string/text_second"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintCircleRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/textViewYear"
            android:layout_marginTop="20dp"/>

        <View
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDEDED"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="15dp"/>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            app:tabMode="scrollable"
            android:background="#EDEDED"
            app:tabIndicatorColor="#FFEB3B"
            app:tabIndicatorHeight="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabTextColor="#505050"
            app:tabSelectedTextColor="@android:color/black"
            app:tabTextAppearance="@style/TabTextAppearance"
            app:layout_constraintTop_toTopOf="@id/div"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

